Added check for compilation context (built-in an inelegant, but still)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ amur
 moor
 moord
 moordt
+moors
+moorsd
+moorst
+moorsdt
+moort
 
 moorq
 moorq.bin
@@ -13,10 +18,6 @@ moorqs
 moorqs.bin
 moorqs.hda
 moorqs0.bin
-moors
-moorsd
-moorst
-moort
 bzMoorq
 bzImage
 vmlinux
